<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/LogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/start"
        android:textColor="@color/main"
        android:textSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/main">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/backgroundButton"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:layout_alignEnd="@id/pass"
            android:layout_marginBottom="15dp"
            android:text="@string/for_password"
            android:textColor="@color/main"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/llRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvForget"
            android:layout_marginBottom="15dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cb_background"
                android:buttonTint="@color/main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textColor="@color/main"
                android:textSize="14dp" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btnLogin"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llRemember"
            android:layout_marginVertical="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:text="@string/or"
            android:textColor="@color/main"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/llAnother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOr">

            <android.widget.Button
                android:id="@+id/btnGoogle"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/google"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llRemember" />

            <android.widget.Button
                android:id="@+id/btnFacebook"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/facebook"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llRemember" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Podval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/Podval1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/not_account"
            android:textColor="@color/main"
            android:layout_marginEnd="5dp"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/podval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/reg"
            android:textColor="@color/main"
            android:textSize="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>