<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/tvHeader"
        android:textColor="@color/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textSize="35dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/Login"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/main">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Name"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/main">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/main"

            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pass"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/main"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_background"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/Remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmPass"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/cb_background"
                android:buttonTint="@color/main" />

            <TextView
                android:textSize="14dp"
                android:textColor="@color/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditions" />

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btnRegister"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Remember"
            android:layout_marginVertical="5dp"
            android:text="@string/register"

            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Or"
            android:textSize="14dp"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="15dp"
            android:text="@string/or" />

        <LinearLayout
            android:id="@+id/Another"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Or">

            <android.widget.Button
                android:id="@+id/Google"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/google"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/Or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Remember" />

            <android.widget.Button
                android:id="@+id/Facebook"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/facebook"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@id/Or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Remember" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNotAccount"
            android:textSize="14dp"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15px"
            android:text="@string/already_register" />

        <TextView
            android:id="@+id/tvLogin"
            android:textSize="14dp"
            android:textColor="@color/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>